--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h3 {
   padding: 5px;
 }
 
-input[type="password"] {
+input[type="number"] {
   width: calc(100% - 94px);
   padding: 10px 20px;
   margin-top: 10px;
@@ -61,7 +61,7 @@ input[type="password"] {
   outline-color: transparent;
 }
 
-input[type="password"]:focus {
+input[type="number"]:focus {
   border-color: #4a90e2;
   outline-color: #4a90e2;
 }
