--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h3 {
 }
 
 #authCodeh3 {
-  padding: 5px;
+  padding: 0px 5px;
 }
 
 input[type="number"] {
@@ -67,10 +67,11 @@ input[type="number"]:focus {
 }
 
 button {
-  margin-top: 15px;
+  margin-top: 10px;
   padding: 12px 24px;
   font-size: 16px;
   font-weight: 600;
+  letter-spacing: 1px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
