--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h5 {
   position: fixed;
   z-index: 9999;
   left: 0; top: 0;
-  width: 100%; height: 100%;
+  width: 100%; height: 80%;
   background-color: rgba(0,0,0,0.7);
 }
 
@@ -127,6 +127,7 @@ h5 {
   border-radius: 10px;
   width: 300px;
   text-align: center;
+  font-size: 18px;
 }
   .popup button {
     margin-top: 10px;
