--- a/style.css
+++ b/style.css
@@ -15,9 +15,13 @@ html {
 .content-wrapper {
   padding: 15px;
 }
+ 
+.content-wrapper h3{
+  text-align: center;
+}
 
 .video-container {
-  margin: 15px 0;
+  margin: 5px 0;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
@@ -26,27 +30,27 @@ html {
 video {
   width: 100%;
   height: auto;
-  max-height: 50vh;
+  max-height: 55vh;
   display: block;
+  object-fit: cover;
 }
 
 header h3 {
   text-align: center;
   color: darkorange;
-  font-size: 30px;
+  font-size: 39px;
   padding: 15px;
-  background-color: #1a1a1a;
 }
 
 h3, h5 {
   color: wheat;
-  margin: 10px 0;
+  
 }
 
 .container {
   max-width: 800px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   border-radius: 12px;
   background-color: #1e1e1e;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
@@ -111,16 +115,19 @@ h5 {
   margin: 15px 0;
 }
 
+/* Aggiunte regole per i popup */
+.initial-hidden {
+  display: none !important;
+}
+
 .popup {
-  display: none;
   position: fixed;
   z-index: 1000;
-  left: 0; 
+  left: 0;
   top: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.8);
-  display: flex;
   align-items: center;
   justify-content: center;
 }
