--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ html {
 .content-wrapper {
   padding: 15px;
 }
- 
-.content-wrapper h3{
-  text-align: center;
-}
 
 .video-container {
   margin: 5px 0;
@@ -38,8 +34,9 @@ video {
 header h3 {
   text-align: center;
   color: darkorange;
-  font-size: 39px;
+  font-size: 30px;
   padding: 15px;
+  
 }
 
 h3, h5 {
@@ -115,19 +112,16 @@ h5 {
   margin: 15px 0;
 }
 
-/* Aggiunte regole per i popup */
-.initial-hidden {
-  display: none !important;
-}
-
 .popup {
+  display: none;
   position: fixed;
   z-index: 1000;
-  left: 0;
+  left: 0; 
   top: 0;
-  width: 100%;
+  width: 100%; 
   height: 100%;
   background-color: rgba(0,0,0,0.8);
+  display: flex;
   align-items: center;
   justify-content: center;
 }
