--- a/style.css
+++ b/style.css
@@ -181,9 +181,9 @@
     .warning-box {
       background-color: rgba(42, 26, 26, 0.8);
       border-left: 4px solid var(--secondary);
-      padding: 1px;
+      padding: 10px;
       border-radius: 8px;
-      margin-bottom: 20px;
+      margin-top: 20px;
       text-align: center;
       animation: pulse-warning 2s infinite;
     }
@@ -479,14 +479,14 @@
 
     .security-notice {
       background: rgba(26, 42, 26, 0.7);
-      border-left: 4px solid var(--success);
+     
       padding: 10px;
       border-radius: 8px;
       text-align: center;
     }
     
     .security-notice h5 {
-      color: var(--success);
+      color: darkorange;
       font-size: 1rem;
       margin-bottom: 5px;
     }
