--- a/style.css
+++ b/style.css
@@ -43,8 +43,22 @@
       position: relative;
       overflow: hidden;
     }
+    .section1 {
+      background-color: rgba(30, 30, 30, 0.9);
+      border-radius: 16px;
+      padding: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      position: relative;
+      overflow: hidden;
+    }
+     .section1 i {
+      color:rgba(255, 140, 0, 0.489);
+    }
 
-    .section::before {
+
+    .section:before {
       content: '';
       position: absolute;
       top: 0;
