--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
   font-size: 2rem;
   font-weight: 800;
   color:#ffaa00d2;
-  letter-spacing: 1.9px;
+  letter-spacing: 1.5px;
 }
 
 .subtitle {
@@ -56,6 +56,14 @@ body {
   font-size: 1.1rem;
   font-weight: 400;
 }
+.spa {
+  margin-top: -25px;
+  font-size: 2rem;
+  font-weight: 800;
+  color:#ffefd5d2;
+  letter-spacing: 1.5px;
+}
+
 
 .card {
   background-color: var(--dark-card);
